--- a/Netflix-clone/Netflix.html
+++ b/Netflix-clone/Netflix.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix India - Watch Movies & TV Shows Online</title>
-    <link rel="stylesheet" href="Netflix-styles.css" type="text/css">
+    <title>Netflix India - Watch TV Shows Online & Watch Movies Online</title>
+    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2023.ico">
+    <link rel="apple-touch-icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.png">
 </head>
 
 <body>
@@ -81,14 +83,39 @@
 
         <div class="movie-card">
             <span class="no1"><span class="no2"><span class="no3">4</span><span aria-hidden="true" data-content="4" class="number">4</span></span></span>
-            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABRfI4EaSpPkVnN6Hu4t-MkvbUxSIOYnTWJDy9Y7_Z0muZF2cHd-E2_XSZFyBMILq_kvJwab6E_6SwBAiKYiway9dRHQ35cDmrmbK5PNWjiRJWaHtuGeufaLC3veyyEnstZxxhNHkVvI6JM1cs1Byx46iStcjPZ4yQY2FqUxDRM4Om9rVqO1KRGEZr7HKLxIeXGFwuk3nTQhShJiO0JKobcnWf4V_fybfax0vmLCNQ_ogCuCkSCWHcUV2dT0yR2q8VAeASFclv6ApCaJSnk-i_v5PTUSr.jpg?r=ee3"
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABbYexddc88Hf2cqz6oTs2RCt1tJxW08vpUxeaa_Reiu7RBmsp9xsTO7UuO4FJJfgI7okcdyiPv1Epa_W8d62uA-lxwMcTDUqdn7pvL8RwJW8qWa0EgqjC8yf47uKIkaudagUefT3W9J5Bq3sUfj3UVTAQ9SG2Y9dHEiOojKHpxd-fyUSutF70Nfpf48GwtuDKREMctQrzKRo2zKYH-VLMJd8n4LX4SQ-PyUVZB3zaXL0YQjsd9ztJSvkE8LMDOBaxufW4scmWFYdT7iITLwOMzbmy4tDMrHeLXsNs587KMzHLjje1imiFcmzgDUK-Q45Jg8xwtkrdD0SMWZsHutqX_UqTl9lnpghmrZnxLcSvSqXxztFDsI.jpg?r=bc0"
                 alt="Movie 4">
         </div>
+
         <div class="movie-card">
             <span class="no1"><span class="no2"><span class="no3">5</span><span aria-hidden="true" data-content="5" class="number">5</span></span></span>
-            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABXGV4zDEp09SNLq2Hw-b7zRg6JJ3SdhPLDPu-fjk8-G-Yskt90MupRS12eE69IdWFzj8PFcmHOr1FMmBDKXhDUz0BhIdA_-mf6Z0KXY24AYgkGFPfGxpBDnC88Yxk2IlxOTqh2RmcBqgrDVscSxfpxYBrBgGfQLiKrs.jpg?r=680"
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABWhpcexUi_jTI68sMYeQu3rtwVOK7PrgfKy7Yuf2Xc3awnK-O6-unr1341ATWMvu9UPN2UeuOUBLK8s4Qzgn_EYfkPqL3tSQ0hpghy8wcpkq0UzGe526Jc682fpPIWATDg378_NHo00_2koOviRRZXdYakSNNNJaC5I0T1z14p8kCi7NciROp_drlqvcw0t_7dxUYGZVyeyjemxLhxjfQQPkE-hPGoTLsXABd8g26vH6ZE_m1amITSyWTFialwmIXQ5PtPZM0H6UAT4MvGkXiMEXveDSc6Q0W2jglkWcE43RuI6xfJQ2KtDNvtNkERC9FzPs0YVvUJA_-ByJYttc79XchpGCWoGuC7HuPG-uJ2GwiVDGYXg.jpg?r=c11"
                 alt="Movie 5">
         </div>
+        <div class="movie-card"> <span class="no1"><span class="no2"><span class="no3">6</span><span aria-hidden="true" data-content="6" class="number">6</span></span></span>
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABd9IS3q8k-_hKoUG0lExWZCw679rsD3xt64MmRNtrELA2CAiFGzcSLtTBUYXd630TZD8DEwbOT3HzPObpYqHaviLHEhUp7FcfkR9o0pTQFZz0szMwYWR18H7rpi7eEvnpagaaz6VYt8mg7J1wHbyGW6ICc0zGh9HhFc.jpg?r=bf7"
+                alt="Movie 6">
+        </div>
+
+<div class="movie-card"> <span class="no1"><span class="no2"><span class="no3">7</span><span aria-hidden="true" data-content="7" class="number">7</span></span></span>
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABVy9jVvV43g_j0OoO0ol2bNgg3gKt1y6o51Z__Bop3DJD7QOxtjNHOTx7k6tJ_f9zi3zUGVnTW03mVx8PaS_MrRkEHlHG0vVgZT677SlhLtdfqOatxdojjCyO3JNgZ5qve8Vc0u0yhVWL1BoUSkhcTZnNH9pbDeTF-3Pf_Hb4Iu7EQHcJc2eonynpIxTT2H7zZOeZVDbQ-hnSaadLCJgn_ZcFWSpCMMuI_lLam9W4UuzdPJoLCQJGxVRxwn95u5VtQp05usLt05ph_S13HH6a3VLgqSj.jpg?r=7d6"
+                alt="Movie 7">
+        </div>
+
+<div class="movie-card"> <span class="no1"><span class="no2"><span class="no3">8</span><span aria-hidden="true" data-content="8" class="number">8</span></span></span>
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABfGWNskOqEtop1r0JForM2G163hy7N7VkE47gB_3pVckyd4FcvLDmdOJIGD37GYGondOPLLrNY_layqDNJUKjLxqU-9lNapktx6kG5qjYGT51OOrb7pcW1TqgJe9TmLWjNjVeR4tR8UHrTRQUUKceUpwETPb4M2qp78.jpg?r=978""
+                alt="Movie 8">
+        </div>
+
+<div class="movie-card"> <span class="no1"><span class="no2"><span class="no3"></span><span aria-hidden="true" data-content="9" class="number">9</span></span></span>
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABXGV4zDEp09SNLq2Hw-b7zRg6JJ3SdhPLDPu-fjk8-G-Yskt90MupRS12eE69IdWFzj8PFcmHOr1FMmBDKXhDUz0BhIdA_-mf6Z0KXY24AYgkGFPfGxpBDnC88Yxk2IlxOTqh2RmcBqgrDVscSxfpxYBrBgGfQLiKrs.jpg?r=680"
+                alt="Movie 9">
+        </div>
+<div class="movie-card"> <span class="no1"><span class="no2"><span class="no3">10</span><span aria-hidden="true" data-content="10" class="number">10</span></span></span>
+            <img src="https://occ-0-3365-2186.1.nflxso.net/dnm/api/v6/mAcAr9TxZIVbINe88xb3Teg5_OA/AAAABe8T9Mw2kXJiXAg7vqzKExMG7Oevz7eOj3P5YKSs-8JOBEZqWTHWtcbZ3d2lQE58kTBqrSQ_k4GElclKGy8XW5LZ9vnWvg0x1Q-NmGnQCJjebY1zJp65TPnjRte79XyhLuglpb7ip3UcybAulekRSDayFZAdyEfCjohZxxSfWBKEBVBAjU-VBR0G-jLkTKKXO0tqLvC24sW2clpWlawce4NdbmnH1avkHv5nRwrAgz-inyuBqM1zss8qKf-_WYnO8TsuD_xHaIOBgYFYjLQpSRj-ttKYCpulK7mJquLWCJ9ReSJKqwPFlFBHMUXFgqsUpTLVc7dewEbr8-FRsusNQaw.jpg?r=4ed"
+                alt="Movie 10">
+        </div>
+
     </div>
     </div>
     <div>
@@ -224,7 +251,7 @@ Get Started ></button>
         <div class="questions-section">
             Questions? Call <a href="tel:000-800-919-1743">000-800-919-1743</a>
         </div>
-    </div>
+    </div><br>
 
     <footer>
         <div class="footer-links">
