--- a/Netflix-clone/Netflix.html
+++ b/Netflix-clone/Netflix.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Netflix India - Watch TV Shows Online & Watch Movies Online</title>
-    <link rel="stylesheet" href="Netflix-styles.css" type="text/css">
-<link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2023.ico">
-<link rel="apple-touch-icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2016.png">
+    <link rel="stylesheet" href="styles.css" type="text/css">
+    <link rel="shortcut icon" href="https://assets.nflxext.com/us/ffe/siteui/common/icons/nficon2023.ico">
 </head>
 
 <body>
@@ -40,7 +39,7 @@
                 <p>Ready to watch? Enter your email to create or restart your membership.</p>
                 <div class="email-signup">
                     <input type="email" placeholder="Email address">
-                    <button>Get Started ></button>
+                    <button>Get Started<span class="arrow">></span></button>
                 </div>
             </div>
         </div>
@@ -250,7 +249,7 @@ Kids profiles come with PIN-protected parental controls that let you restrict th
     <div class="email-signup2">
         <input type="email" placeholder="Email address">
         <button>
-Get Started ></button>
+Get Started<span class="arrow">></span></button>
     </div>
         <div class="questions-section">
             Questions? Call <a href="tel:000-800-919-1743">000-800-919-1743</a>
